# legendary-waffle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
archive/cross_encoder/configs/: cross_encoder.yaml
archive/cross_encoder/models/: cross_encoder.py
archive/cross_encoder/tests/: test_cross_encoder_dataset.py
archive/cross_encoder/training/: cross_encoder_trainer.py
archive/negative_mining_and_cross_encoder/: negative_mining.py
configs/: base.yaml  length_only.yaml  masked_only.yaml  medium.yaml  small.yaml  tiny.yaml
src/swipealot/: __init__.py  config.py  text_utils.py  utils.py
src/swipealot/analysis/: __init__.py  attention_extractor.py  attention_visualizer.py
src/swipealot/data/: __init__.py  collators.py  cross_encoder_dataset.py  dataset.py  masking_policies.py  preprocessing.py  tokenizer.py
src/swipealot/data/collators/: __init__.py  masked.py  pairwise.py  utils.py  validation.py
src/swipealot/evaluation/: __init__.py  common.py  length.py  masked_text.py  metrics.py  path.py
src/swipealot/huggingface/: README.md  __init__.py  configuration_swipe.py  cross_encoder_wrapper.py  modeling_swipe.py  processing_swipe.py  tokenization_swipe.py
src/swipealot/models/: __init__.py  embeddings.py  heads.py  transformer.py
src/swipealot/scripts/: attention_grid.py  attention_map.py  convert_hf.py  evaluate.py  reexport_hf_code.py  train.py  validate.py
src/swipealot/training/: __init__.py  checkpoint_utils.py  cross_encoder_trainer.py  loss.py  metrics.py  trainer.py
tests/: test_attention_profiles.py  test_case_insensitive.py  test_eos_token.py  test_masking.py  test_model.py  test_preprocessing.py  test_rotation.py  test_text_utils.py  test_tokenizer_punctuation.py  test_training.py  test_zero_text_attention.py
tests/data/: test_collators.py  test_negative_mining.py
tests/evaluation/: test_path_metrics.py
tests/huggingface/: __init__.py  test_hf_integration.py
tests/training/: test_length_metrics.py  test_loss.py  test_swipe_loss_masking.py
